# shoppr

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
ai-chatbot/: package.json  pnpm-lock.yaml
ai-chatbot/config/: assets.json  bridge_risk_score.json  chains.json  policy.defaults.json
apps/web/: .env.example  drizzle.config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
backend/scripts/: start-dev.sh  test-mcp.ts
docs/: AGENTS.md  ARCHITECTURE.md  BEST_PRACTICES.md  MCP_SERVERS.md  REPO_STRUCTURE.md  acceptance-criteria.md  api-design.md  budibase-integration.md  frontend-control-tower.md  implementation-roadmap.md  product-overview.md  simulation-pipeline.md  system-architecture.md  template-selection.md  testing-strategy.md
frontend/mobile/: README.md  package.json
frontend/ui/: package.json  tsconfig.json
frontend/web/: README.md  biome.jsonc  components.json  drizzle.config.ts  next.config.ts  package.json  playwright.config.ts  tsconfig.json
saas-starter/: package.json  pnpm-lock.yaml
scripts/: start-dev.sh  test-mcp.ts
services/: pyproject.toml
services/schema_registry/: __init__.py  api.py  bootstrap.py  connectors.py  jobs.py  main.py  mandates.py  metrics.py  models.py  queue.py  repositories.py  security.py  store.py  trust.py
services/schema_registry/queue_backends/: redis.py
services/schema_registry/repository_backends/: s3.py
services/tests/: test_artifact_repository.py  test_bootstrap.py  test_simulation_queue.py
(+153 files in other folders)
